fix Rensselaer logo formatting on smaller screen sizes

--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -19,11 +19,10 @@ footer {
   }
 }
 
-
 .footerlogo {
   width: 100%;
   max-width: 600px;
-  margin: 0 $margin2*2 $margin2;
+  padding: 0 $margin2*2 $margin2;
 }
 
 .col-bottomlink {
